[project]
name = "nano-vllm-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "cmake>=4.2.1",
    "einops>=0.8.2",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=1.4.1",
    "ninja>=1.13.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "triton>=3.6.0",
]
