[project]
name = "nano-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dextermayhewjd", email = "dexterding99@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.4.1",
    "safetensors>=0.7.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "transformers>=5.2.0",
]

[project.scripts]
nano-vllm = "nano_vllm:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
